@@ -2,6 +2,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 
 v 8.9.11
   - Respect the fork_project permission when forking projects
+  - Set a restrictive CORS policy on the API for credentialed requests
 
 v 8.9.10
   - Allow the Rails cookie to be used for API authentication.
